[package]
name = "activate_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
wayland-client = "0.30.1"
wayland-protocols-wlr = { version = "0.1.0", features = ["client"] }
anyhow = "1.0.69"
